[gd_scene load_steps=6 format=3 uid="uid://bskg2xljsxctn"]

[ext_resource type="Script" path="res://source/master_server/master.gd" id="1_vdt02"]
[ext_resource type="PackedScene" uid="uid://o7b5s6mrjgv5" path="res://source/master_server/components/gateway_manager/gateway_manager.tscn" id="2_g8wh3"]
[ext_resource type="PackedScene" uid="uid://d2h55jybtq0c4" path="res://source/master_server/components/world_manager/world_manager.tscn" id="3_keb1d"]
[ext_resource type="PackedScene" uid="uid://p8wqcxas4eg0" path="res://source/master_server/components/authentication_manager/authentication_manager.tscn" id="4_3any3"]
[ext_resource type="Script" path="res://source/master_server/components/database.gd" id="5_e8teq"]

[node name="Master" type="Node"]
script = ExtResource("1_vdt02")

[node name="GatewayManager" parent="." instance=ExtResource("2_g8wh3")]

[node name="WorldManager" parent="." instance=ExtResource("3_keb1d")]

[node name="AuthenticationManager" parent="." instance=ExtResource("4_3any3")]

[node name="Database" type="Node" parent="."]
script = ExtResource("5_e8teq")
